# blockchain

./: .gitignore  Cargo.toml  config.yml.dist
src/: block.rs  blockchain.rs  config.rs  main.rs  transaction.rs
src/common/: calculate_hash.rs  compute_address_from_pub_key.rs
src/config/: config.rs
src/core/: block.rs  blockchain.rs
src/errors/: transaction_errors.rs
src/structs/: token.rs  transaction.rs
src/test_utils/: mod.rs
src/tests/: helpers.rs
src/tests/core/: blockchain_test.rs
src/wallet/: wallet.rs
